--- a/views/pages/projects.pug
+++ b/views/pages/projects.pug
@@ -79,15 +79,15 @@ block content
             class: "layout-col-12 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/battery-tester",
+              href: "/projects/battery-manager",
               class: "layout-block"
             }, true)
               +tile({
-                title: "Battery Tester",
+                title: "Battery Manager",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/joseph-projects/battery_tester/BatteryTester_Diag",
+                  src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
                   alt: "An image of the battery testing workstation box.",
                 }
               })
@@ -130,15 +130,15 @@ block content
             class: "layout-col-12 layout-padding-small layout-padding-vert-large"
           })
             +link({
-              href: "/projects/celestica",
+              href: "/projects/phoenix",
               class: "layout-block"
             }, true)
               +tile({
-                title: "Celestica",
+                title: "Phoenix",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "cloudinary/joseph-projects/celestica/New_Solar_Panel_1-03",
+                  src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
                   alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
                 }
               })
