--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -6,7 +6,7 @@ mixin image(value = {})
   - let cloudinaryTest = /^cloudinary\//.test(src);
   - let basicURL = "https://res.cloudinary.com/okikio-assets/image/upload/dpr_auto,f_auto,fl_progressive:steep";
   -
-    let urlParse = (url = "") => cloudinaryTest ? `${basicURL + url}/${src.replace(/^cloudinary\//, "")}` : src;
+    let urlParse = (url = "") => cloudinaryTest ? `${basicURL + url},c_limit/${src.replace(/^cloudinary\//, "")}` : src;
 
   .layer-image(class=_class title=alt)
     .layer-image-preview-img-card
@@ -15,12 +15,12 @@ mixin image(value = {})
         picture.plchldr-pic
           //- figcaption(aria-hidden="true")= alt
           //- source.webp(srcset!=`${urlParse(",w_50,q_auto,e_blur:150")}.webp`)
-          img.placeholder-img(src!=`${urlParse(",w_50,q_auto,e_blur:150")}.jpeg` sizes="100vw" width="100vw" alt=alt loading="lazy")
+          img.placeholder-img(src!=`${urlParse(",w_50,q_auto,e_blur:150")}.jpg` sizes="100vw" width="100vw" alt=alt loading="lazy")
         picture.core-img-pic
-          .webp(data-srcset!=`${urlParse(",w_600,q_100")}.webp`)
+          .webp(data-srcset!=`${urlParse(",w_600,q_100,c_limit")}.webp`)
           //- source.webp(media='(max-width: 900px)' srcset!=`${urlParse(",w_900,q_80")}.webp` sizes="100vw" width="100vw" type='image/webp')
           //- source.webp(media='(min-width: 900px)' srcset!=`${urlParse(",w_950,q_90")}.webp` sizes="100vw" width="100vw" type='image/webp')
-          img.core-img(data-src!=`${urlParse(",w_1100,q_auto")}.jpeg` alt=alt loading="lazy" width="100vw" itemprop="url")
+          img.core-img(data-src!=`${urlParse(",w_1100,q_auto")}.jpg` alt=alt loading="lazy" width="100vw" itemprop="url")
         noscript Javascript is necessary for this sites awesome experience.
           picture
             source(srcset!=`${urlParse(",w_auto,q_auto")}.webp` sizes="100vw" width="100vw" type='image/webp')
