--- a/views/pages/projects/publications.pug
+++ b/views/pages/projects/publications.pug
@@ -6,22 +6,11 @@ block pageInfo
       websiteURL,
       url: "/projects/publications",
       name: "publications",
-      title: "Publications — Academic Publications.",
+      title: "Academic Publications.",
       description: "I worked with ... Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
     };
 
 block content
-  //- Banner layer
-  +banner({
-    title: "Publications — Academic Publications.",
-    content: "I worked with ... Lorem Ipsium dolor sit amet, tempor...",
-    image: {
-      class: "effect-parallax hero-img",
-      src: "cloudinary/aerial-photo-of-brown-mountains",
-      alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
-    }
-  })
-
   //- Intro layer
   +layer({
     class: "layout-padding-horz-default--device-gt-tablet"
@@ -30,20 +19,23 @@ block content
       class: "layout-shorten layout-contain"
     })
       +main({
-        class: "layout-padding-vert-small layout-clearfix"
+        class: "layout-padding-vert-large layout-clearfix"
       })
+        h1.layout-padding-vert.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Academic Publications.
         +p
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
-          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
-          span.layout-inline.layout-margin-dull(lorem="1")
-          p.layout-inline.layout-margin-dull(lorem="3")
-          span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
-          span.layout-inline.layout-margin-dull= " "
-          +link({
-            href: "/",
-            class: "layout-margin-horz-left-mini",
-            content: "wanna go back home?"
-          })
+          span.layout-inline.layout-margin-dull
+            ol
+              li O. Ojo, X. Lin, H. Lang, “A Threshold-Based Voltage Fault Detection Method Enabled by A Novel Neural Network Architecture for Lithium-ion Batteries” [Under Review]
+
+              li O. Ojo, X. Lin, H. Lang, and Y. Kim, “A Recurrent Neural Networks Approach for Estimating the Core Temperature in Lithium-Ion Batteries”, Progress in Canadian Mechanical Engineering. Volume 3, Jun. 2020, doi: 10.32393/csme.2020.130
+
+              li O. Ojo, H. Lang, Y. Kim, X. Hu, B. Mu and X. Lin, "A Neural Network-Based Method for Thermal Fault Detection in Lithium-Ion Batteries”, in IEEE Transactions on Industrial Electronics, doi: 10.1109/TIE.2020.2984980
+
+              li J. Ojo, X. Lin and H. Lang, "Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots", CNKI.com, 2019. [Online]. Available:
+                +link({
+                  href: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm",
+                  content: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm"
+                })(target="_blank" rel="noopener" title="The link to the publication for Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots.")
 
   //- Next page layer
   +link({
