--- a/views/pages/projects/ultima-apparel.pug
+++ b/views/pages/projects/ultima-apparel.pug
@@ -6,15 +6,15 @@ block pageInfo
       websiteURL,
       url: "/projects/ultima-apparel",
       name: "ultima-apparel",
-      title: "Ultima Apparel — Clothes for good health, for the modern person.",
-      description: "Ultima Apparel, a project that I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions."
+      title: "Ultima Apparel — Improving posture and form through data",
+      description: "A project to improve posture and acquire data about workout form."
     };
 
 block content
   //- Banner layer
   +banner({
-    title: "Ultima Apparel",
-    content: "Apparel that ensures good health through modern means.",
+    title: "Project 4: Ultima Apparel (2016 - 2018)",
+    content: "A project to improve posture form during workouts by means of clothing that tracked form and posture.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
@@ -33,21 +33,15 @@ block content
         class: "layout-padding-vert-small layout-clearfix"
       })
         +p
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
-          span.layout-inline.layout-margin-dull project I took on with a few friends, to create an amazing line of clothing that ensured better health for the user, by giving them the information they need to make better decisions.As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
-          span.layout-inline.layout-margin-dull(lorem="1")
-          p.layout-inline.layout-margin-dull(lorem="3")
-          span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
-          span.layout-inline.layout-margin-dull= " "
-          +link({
-            href: "/",
-            class: "layout-margin-horz-left-mini",
-            content: "wanna go back home?"
-          })
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left U
+          span.layout-inline.layout-margin-dull ltima Apparel started off as a pet project for my co-founder. He was looking to find a way to improve his posture and acquire data about his form after hurting himself during a workout. He approached me to see if we could solve that problem for others as well.
+          br
+          br
+          | We decided to enter the project into our capstone competition as our final year capstone project.
 
   //- Next page layer
   +link({
-    href: "/projects/celestica",
+    href: "/projects/phoenix",
     class: "layout-block"
   }, true)
     +layer({
@@ -63,13 +57,13 @@ block content
         +main({
           class: "layout-padding-vert-sub-large--device-gt-tablet"
         })
-          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Celestica
+          p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Phoenix
 
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
             class: "effect-parallax",
-            src: "cloudinary/joseph-projects/celestica/New_Solar_Panel_1-03",
+            src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
             alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
           }
         })
