--- a/src/pug/pages/projects/sarbot.pug
+++ b/src/pug/pages/projects/sarbot.pug
@@ -41,7 +41,7 @@ block content
             i [ + image ...]
         .layout-margin-horz
           +tile({
-            class: "layer-surface layer-box layout-block",
+            class: "layer-surface layer-box-mid layer-box layout-block",
             image: {
               src: "cloudinary/joseph-projects/sarbot/2-Floor_Maze",
               alt: "An image of the floor Maze Sarbot had to cross"
