--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -26,7 +26,7 @@ html(lang="en")
     link(rel="manifest", href="/manifest.json")
     link(type="text/plain" rel="author" href="/humans.txt")
 
-    script(src="/js/theme.min.js", async)
+    script(src="/js/theme.min.js", defer)
     script(src=`https://cdn.polyfill.io/v3/polyfill.min.js?features=default,es2015,es2016,es2017,es2018,Object.entries,fetch,IntersectionObserver,IntersectionObserverEntry,smoothscroll,matchMedia,localStorage,getComputedStyle,Element.prototype.scrollIntoView,WebAnimations` defer)
     
     -
