--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -350,22 +350,41 @@ a.skip-main {
     }
 }
 
-.load-img {
+figure.load-img {
+    height: 500px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
     transform: translate3d(0, 0, 0);
     height: 100%;
+
+    img {
+        position: absolute;
+        object-fit: cover;
+        object-position: center center;
+        left: 0;
+        bottom: 0;
+
+        height: 100%;
+        width: 100%;
+    }
+
+    &.bottom img {
+        object-position: center bottom;
+    }
 }
 
 .placeholder-img {
     image-rendering: auto;
     image-rendering: smooth;
-    transform: scale(1.3);
+    transform: scale(1.1);
     position: absolute;
-    // filter: blur(5px);
+    filter: blur(5px);
     left: 0;
     top: 0;
 }
 
-.core-img-pic {
+.core-img {
     transition: opacity 0.9s ease-out, transform 0.9s ease-out;
     transform: scale(1.2);
     opacity: 0;
@@ -380,8 +399,8 @@ a.skip-main {
     top: 0;
 
     &-show {
-        & .core-img-pic {
-            transform: scale(1.1);
+        & .core-img {
+            transform: scale(1);
             opacity: 1;
         }
     }
