--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -37,12 +37,12 @@ mixin image(value = {})
 
     let cloudinaryTest = /^cloudinary\//.test(src);
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
-    let urlParse = (filters = "c_mfit,w_auto") => cloudinaryTest ? `${origin + "q_auto:best/" + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
+    let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "q_auto:best/c_fit," + filters},dpr_auto/${src.replace(/^cloudinary\//, "")}` : src;
   
   .layer-image(class=_class title=alt)
     figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")&attributes(attributes)
       .layer-image-overlay
-      img.placeholder-img(src!=`${urlParse("c_fit,w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
+      img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
       img.core-img(data-src!=`${urlParse()}.webp` alt=alt loading="lazy" itemprop="url")
       noscript
         img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading="lazy")
